--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,40 @@
-﻿.vs/
+﻿## Ignore Visual Studio temporary files, build results, and
+## other common files.
+*.vs/
+*.DS_Store
+.vscode/
+*.code-workspace
+*.tmp
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+.vs/
+*._ReSharper.*
+ReSharper
+.vscode/
+.vscode/*
+
+# Ignore OS generated files
+.DS_Store
+
+# Ignore build output directories
+bin/
+obj/
+
+# Ignore user-specific files
+*.swp
+*.swo
+*~
+*.sublime-project
+*.sublime-workspace
+
+# Ignore log files
+*.log
+
+# Ignore compiled files
+*.dll
+*.exe
+*.so
+*.dylib
+*.class
