--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,21 @@
 ﻿## Ignore Visual Studio temporary files, build results, and
 ## other common files.
-*.DS_Store
-*.vscode/
+.vs/
+.DS_Store
+.vscode/
 *.code-workspace
 *.tmp
 *.suo
 *.user
 *.userosscache
 *.sln.docstates
-*.vs/
 *._ReSharper.*
 *ReSharper
-*.vscode/
-*.vscode/*
-
-# Ignore OS generated files
-*.DS_Store
+.vscode/*
 
 # Ignore build output directories
-*bin/
-*obj/
+bin/
+obj/
 
 # Ignore user-specific files
 *.swp
